# SemanticVersionNumberTool

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
docker/nginx/: Dockerfile  nginx.conf
docker/src/: .bashrc  Dockerfile  ipython-config.py  post_deploy.sh  (+3 more)
src/: .flake8  pyproject.toml  pytest.ini
src/backend/: prompt.py  urls.py
src/backend/celery_backend/: celery.py  celery_beat_schedule.py  celery_config.py  test_celery_worker.py
src/backend/settings/: settings.py  test_settings.py
src/backend/templates/admin/: base_site.html
src/core/: apps.py  signals.py
src/core/admin/: __init__.py  project_admin.py  user_profile_admin.py  version_admin.py
src/core/api/: urls.py
src/core/api/serializers/: __init__.py  project_serializers.py  register_serializers.py  user_profile_serializers.py  version_serializers.py
src/core/api/serializers/tests/: test_project_serializers.py  test_register_serializers.py  test_user_profile_serializers.py  test_version_serializers.py
src/core/api/views/: __init__.py  project_views.py  register_views.py  version_views.py
src/core/api/views/tests/: mixins.py  test_project_views.py  test_register_views.py  test_version_views.py
src/core/exceptions/: api.py
src/core/factories/: __init__.py  project_factories.py  user_profile_factories.py  version_factories.py
src/core/migrations/: 0001_initial.py
src/core/mixins/: __init__.py  views.py
src/core/models/: __init__.py  abstract.py  project.py  user_profile.py  version.py
src/core/models/tests/: test_project.py  test_user_profile.py  test_version.py
